# PAIQM_root

./: MANIFEST.in  README.md  key  key.pub  paiqm_game.yaml  paiqm_root.yaml  pyproject.toml  setup.py
PAIQM_Launcher/: __main__.py  game.py  game_handler.py  game_launcher.py  launcher_backend.py  launcher_main.py  paiqm_main.py  registry.json  test_launcher_flow.py  theme.qss
PAIQM_Launcher/data/: games.json
paiqm_launcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: build_manifest.py
