[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paiqm-launcher"
version = "1.0.8"
description = "Portable AI Quantum Machine Launcher"
requires-python = ">=3.11"
dependencies = [
    "qiskit",
    "matplotlib",
    "requests",
    "scipy",
    "qiskit_ibm_runtime",
    "qiskit_aer",
    "numpy",
    "PyQt5",
    "pylatexenc",
    "PyYAML"
]

[project.scripts]
paiqm-launcher = "PAIQM_Launcher.__main__:main"
