[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paiqm-launcher"
version = "2.0.3"
description = "Portable AI Quantum Machine Launcher"
requires-python = ">=3.11"
dependencies = [
    "qiskit",
    "matplotlib",
    "requests",
    "scipy",
    "qiskit_ibm_runtime",
    "qiskit_aer",
    "numpy",
    "PyQt5",
    "pylatexenc",
    "PyYAML"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
PAIQM_Launcher = [
    "data/*.json",
    "theme.qss",
    "assets/**/*"   # <-- include all nested files under assets
]

[project.scripts]
paiqm-launcher = "PAIQM_Launcher.__main__:main"
